<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Intranet Epitech</string>
    <string name="connect">Connexion</string>
    <string name="epitech">Epitech</string>
    <string name="intranet_epitech">Intranet Epitech</string>
    <string name="image">Image</string>

    <!-- Navigation -->
    <string name="navigation_netsoul">Netsoul</string>
    <string name="navigation_dashboard">Récapitulatif</string>
    <string name="navigation_calendar">Calendrier</string>
    <string name="navigation_susie">Susies</string>
    <string name="navigation_mark">Notes</string>
    <string name="navigation_trombi">Trombinoscope</string>
    <string name="navigation_setting">Paramètres</string>
    <string name="navigation_about">À propos</string>
    <string name="navigation_project">Projets</string>

    <!-- Pages -->
    <string name="page_login">Connexion</string>

    <!-- About -->
    <string name="about_application">À propos de l\'application</string>
    <string name="about_authors">Auteurs de l\'application</string>
    <string name="about_source">Source de l\'application</string>
    <string name="about_application_content">Version : 2.0 (release 10)\nDate de mise à jour : 22/11/2014</string>
    <string name="about_authors_content">Maigret Aurélien (maigre_a)\nhttp://www.dewep.net\n\nColin Julien (colin_g)\nhttps://github.com/Toldy</string>
    <string name="about_source_content">GitHub : https://github.com/Dewep/IntranetEpitechV2</string>

    <!-- Landing -->
    <string name="landing_connection">Connexion</string>
    <string name="landing_about">À propos</string>
    <string name="landing_login_login_epitech">Login Epitech</string>
    <string name="landing_login_password_epitech">Mot de passe UNIX</string>
    <string name="landing_login_connect">Connexion</string>
    <string name="landing_connection_in_progress">Connexion à l\'Intranet Epitech en cours &#8230;</string>
    <string name="landing_connection_impossible">Impossible de se connecter à l\'Intranet Epitech</string>
    <string name="landing_identity_required">Vous devez renseigner vos identifiants pour accéder à l\'Intranet Epitech</string>
    <string name="landing_provide_login">Merci de renseigner le login.</string>
    <string name="landing_provide_password">Merci de renseigner le mot de passe.</string>
    <string name="landing_bad_identity">Mauvais identifiants.</string>

    <!-- Calendar -->
    <string name="calendar_week_title">Semaine du %1$s au %2$s</string>

</resources>
