<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/ui_navigation_personal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="horizontal"
            android:paddingBottom="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="15dp" >

            <fr.qinder.layout.ImageViewLoader
                android:id="@+id/ui_navigation_personal_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="50dp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/ui_navigation_personal_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ui_navigation_personal_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/UiNavigationElement" >

            <LinearLayout style="@style/UiNavigationColumnImage" >

                <ImageView
                    style="@style/UiNavigationImage"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_ui_navigation_netsoul" />
            </LinearLayout>

            <LinearLayout style="@style/UiNavigationColumnContent" >

                <TextView
                    style="@style/UiNavigationText"
                    android:text="@string/navigation_netsoul" />

                <TextView
                    android:id="@+id/ui_navigation_state"
                    style="@style/UiNavigationText"
                    android:textColor="@color/grey_dark"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/ui_navigation_netsoul"
                    style="@style/UiNavigationImage"
                    android:layout_width="30dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:background="@drawable/hover_bg"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_ui_navigation_setting" />

                <ToggleButton
                    android:id="@+id/ui_navigation_netsoul_toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/UiNavigationSeparator" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ui_navigation_dashboard"
            style="@style/UiNavigationElement" >

            <LinearLayout style="@style/UiNavigationColumnImage" >

                <ImageView
                    style="@style/UiNavigationImage"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_ui_navigation_dashboard" />
            </LinearLayout>

            <LinearLayout style="@style/UiNavigationColumnContent" >

                <TextView
                    style="@style/UiNavigationText"
                    android:text="@string/navigation_dashboard" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ui_navigation_calendar"
            style="@style/UiNavigationElement" >

            <LinearLayout style="@style/UiNavigationColumnImage" >

                <ImageView
                    style="@style/UiNavigationImage"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_ui_navigation_calendar" />
            </LinearLayout>

            <LinearLayout style="@style/UiNavigationColumnContent" >

                <TextView
                    style="@style/UiNavigationText"
                    android:text="@string/navigation_calendar" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ui_navigation_susie"
            style="@style/UiNavigationElement" >

            <LinearLayout style="@style/UiNavigationColumnImage" >

                <ImageView
                    style="@style/UiNavigationImage"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_ui_navigation_susie" />
            </LinearLayout>

            <LinearLayout style="@style/UiNavigationColumnContent" >

                <TextView
                    style="@style/UiNavigationText"
                    android:text="@string/navigation_susie" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ui_navigation_mark"
            style="@style/UiNavigationElement" >

            <LinearLayout style="@style/UiNavigationColumnImage" >

                <ImageView
                    style="@style/UiNavigationImage"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_ui_navigation_mark" />
            </LinearLayout>

            <LinearLayout style="@style/UiNavigationColumnContent" >

                <TextView
                    style="@style/UiNavigationText"
                    android:text="@string/navigation_mark" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ui_navigation_project"
            style="@style/UiNavigationElement" >

            <LinearLayout style="@style/UiNavigationColumnImage" >

                <ImageView
                    style="@style/UiNavigationImage"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_ui_navigation_project" />
            </LinearLayout>

            <LinearLayout style="@style/UiNavigationColumnContent" >

                <TextView
                    style="@style/UiNavigationText"
                    android:text="@string/navigation_project" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ui_navigation_trombi"
            style="@style/UiNavigationElement" >

            <LinearLayout style="@style/UiNavigationColumnImage" >

                <ImageView
                    style="@style/UiNavigationImage"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_ui_navigation_trombi" />
            </LinearLayout>

            <LinearLayout style="@style/UiNavigationColumnContent" >

                <TextView
                    style="@style/UiNavigationText"
                    android:text="@string/navigation_trombi" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout style="@style/UiNavigationSeparator" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ui_navigation_setting"
            style="@style/UiNavigationElement" >

            <LinearLayout style="@style/UiNavigationColumnImage" >

                <ImageView
                    style="@style/UiNavigationImage"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_ui_navigation_setting" />
            </LinearLayout>

            <LinearLayout style="@style/UiNavigationColumnContent" >

                <TextView
                    style="@style/UiNavigationText"
                    android:text="@string/navigation_setting" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ui_navigation_about"
            style="@style/UiNavigationElement" >

            <LinearLayout style="@style/UiNavigationColumnImage" >

                <ImageView
                    style="@style/UiNavigationImage"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_ui_navigation_about" />
            </LinearLayout>

            <LinearLayout style="@style/UiNavigationColumnContent" >

                <TextView
                    style="@style/UiNavigationText"
                    android:text="@string/navigation_about" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>