<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="top" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40.0dp"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:padding="3.0dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/landing_logo"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingLeft="10.0dp"
                android:paddingRight="10.0dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="30.0dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/epitech"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_logo_grey" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/landing_connection"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingLeft="10.0dp"
                android:paddingRight="10.0dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="6.0dp"
                    android:paddingRight="6.0dp"
                    android:text="@string/landing_connection"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="12.0sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/landing_connection_progressbar"
                    android:layout_width="20.0dp"
                    android:layout_height="20.0dp"
                    android:layout_gravity="center" />

                <ImageView
                    android:id="@+id/landing_connection_error"
                    android:layout_width="20.0dp"
                    android:layout_height="20.0dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/epitech"
                    android:src="@drawable/ic_error"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:layout_width="1.0dp"
                android:layout_height="24.0dp"
                android:layout_gravity="center"
                android:layout_marginLeft="4.0dp"
                android:layout_marginRight="4.0dp"
                android:background="@color/white" />

            <LinearLayout
                android:id="@+id/landing_about"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:paddingLeft="10.0dp"
                android:paddingRight="10.0dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="6.0dp"
                    android:paddingRight="6.0dp"
                    android:text="@string/landing_about"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="12.0sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/landing_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp" />

</FrameLayout>